--- a/src/app/Popup/index.html
+++ b/src/app/Popup/index.html
@@ -3,8 +3,8 @@
   Hello! ThemeSong will be open-source soon™️!
 
   Current tech:
-  * React (React 17)
-  * Redux (Redux Toolkit)
+  * React (React 18)
+  * Zustand
   * Emotion
   * MUI
   * and more
