--- a/src/app/Popup/index.css
+++ b/src/app/Popup/index.css
@@ -45,6 +45,10 @@ input {
   background-color: rgba(250, 250, 250, 0.4) !important;
 }
 
+button {
+  padding: 0;
+}
+
 button:hover {
   cursor: pointer;
 }
