--- a/apps/extension/src/app/Options/index.css
+++ b/apps/extension/src/app/Options/index.css
@@ -4,7 +4,7 @@
 
 body {
   box-sizing: border-box;
-  background-color: rgb(51, 52, 53);
+  background-color: rgb(51 52 53);
   padding: 20px;
   color: white;
 }
