--- a/apps/extension/src/app/Popup/index.css
+++ b/apps/extension/src/app/Popup/index.css
@@ -6,7 +6,7 @@
 body {
   box-sizing: border-box;
   font-family: sans-serif;
-  background-color: rgb(40, 40, 40);
+  background-color: rgb(40 40 40);
   color: white;
 }
 
@@ -32,17 +32,17 @@ input {
 }
 
 ::-webkit-scrollbar-track {
-  border-left: 1px solid rgba(124, 124, 124, 0.493) !important;
+  border-left: 1px solid rgb(124 124 124 / 0.493) !important;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: rgba(250, 250, 250, 0.15) !important;
-  border: 2px solid rgba(0, 0, 0, 0.342);
+  background-color: rgb(250 250 250 / 0.15) !important;
+  border: 2px solid rgb(0 0 0 / 0.342);
   border-radius: 8px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: rgba(250, 250, 250, 0.4) !important;
+  background-color: rgb(250 250 250 / 0.4) !important;
 }
 
 button {
