Customize and personalize asset names
More descriptive

--- a/apps/extension/src/app/Popup/index.html
+++ b/apps/extension/src/app/Popup/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="UTF-8" />
-    <title>ThemeSong Popup Settings</title>
+    <title>ThemeSong Popup</title>
   </head>
   <body>
     <div id="app-container"></div>
