--- a/apps/website/styles.css
+++ b/apps/website/styles.css
@@ -4,8 +4,8 @@
 
 body {
   box-sizing: border-box;
-  background-color: #fff;
-  color: #000;		
+  background-color: #141414;
+  color: #fff;
   font-family: courier;
   font-size: 16px;
   font-weight: 400;
@@ -18,7 +18,7 @@ h1 {
 }
 
 a {
-  color: royalblue;
+  color: #ff0014;
 }
 
 a:hover {
