--- a/apps/extension/src/app/Popup/index.css
+++ b/apps/extension/src/app/Popup/index.css
@@ -8,6 +8,10 @@ body {
   font-family: sans-serif;
   background-color: rgb(40 40 40);
   color: white;
+  height: 600px;
+  width: 400px;
+  max-height: 600px;
+  max-width: 400px;
 }
 
 h1,
