--- a/apps/extension/src/app/Popup/index.css
+++ b/apps/extension/src/app/Popup/index.css
@@ -6,7 +6,7 @@
 body {
   box-sizing: border-box;
   font-family: sans-serif;
-  background-color: rgb(40 40 40);
+  background-color: #000;
   color: white;
   height: 600px;
   width: 400px;
