--- a/apps/extension/src/app/SidePanel/index.html
+++ b/apps/extension/src/app/SidePanel/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>ThemeSong SidePanel</title>
+    <title>ThemeSong Side Player</title>
   </head>
   <body>
     <div id="app-container"></div>
