--- a/apps/extension/src/app/Popup/index.css
+++ b/apps/extension/src/app/Popup/index.css
@@ -30,23 +30,8 @@ input {
   color: inherit;
 }
 
-::-webkit-scrollbar {
-  width: 1em;
-  height: 1em;
-}
-
-::-webkit-scrollbar-track {
-  border-left: 1px solid rgb(124 124 124 / 0.493) !important;
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: rgb(250 250 250 / 0.15) !important;
-  border: 2px solid rgb(0 0 0 / 0.342);
-  border-radius: 8px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background-color: rgb(250 250 250 / 0.4) !important;
+html {
+  scrollbar-color: var(--ts-base-100-alpha-02-color, rgb(255 255 255 / 0.2)) transparent;
 }
 
 button {
