--- a/apps/extension/src/app/Song/SongInfoDisplay/SongInfoDisplay.css
+++ b/apps/extension/src/app/Song/SongInfoDisplay/SongInfoDisplay.css
@@ -16,6 +16,6 @@ ytmusic-player:not([player-ui-state="FULLSCREEN"]) #songDivNode {
 
 @media (min-width: 1499px) {
   #songDivNode {
-    max-width: 35vw;
+    max-width: 650px;
   }
 }
